--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ logging.level.com.foreingExchange=DEBUG
 endPoint.country=https://free.currencyconverterapi.com/api/v5/countries
 endPoint.currency=https://free.currencyconverterapi.com/api/v5/currencies
 endPoint.convert=https://free.currencyconverterapi.com/api/v5/convert
-country.top=Argentina,Australia,Bolivia,Brazil,Chile,China,Paraguay,Peru,Russia,Spain,United Kingdom,United States of America,Uruguay,Venezuela
+country.top=Argentina,Australia,China,Spain,United States of America
+##country.top=Argentina,Australia,Chile,China,Paraguay,Peru,Russia,Spain,United Kingdom,United States of America,Uruguay,Venezuela
 
