--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<exclusions>
+        		<exclusion>
+            		<groupId>nz.net.ultraq.thymeleaf</groupId>
+            		<artifactId>thymeleaf-layout-dialect</artifactId>
+        		</exclusion>
+      		</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
