--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+server.port=${PORT:8080}
 logging.level.org.springframework.web=ERROR
 logging.level.com.foreingExchange=DEBUG
 endPoint.country=https://free.currencyconverterapi.com/api/v5/countries
