--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 server.port=${PORT:8080}
+server.servlet.path=/
 logging.level.org.springframework.web=ERROR
 logging.level.com.foreingExchange=DEBUG
 endPoint.country=https://free.currencyconverterapi.com/api/v5/countries
