--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,32 @@ logging.level.com.foreingExchange=DEBUG
 endPoint.country=https://free.currencyconverterapi.com/api/v5/countries
 endPoint.currency=https://free.currencyconverterapi.com/api/v5/currencies
 endPoint.convert=https://free.currencyconverterapi.com/api/v5/convert
-##country.top=Argentina,Australia,China,Spain,United States of America
-country.top=Argentina,Australia,Chile,China,Paraguay,Peru,Russia,Spain,United Kingdom,United States of America,Uruguay,Venezuela
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/exchange
+spring.datasource.username=postgres
+spring.datasource.password=shadow78
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+spring.jpa.hibernate.ddl-auto= update
+
+# Naming strategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
